# Lima-camera-mythen3

./: .gitignore  CMakeLists.txt  README.md
conda/camera/: meta.yaml
conda/tango/: meta.yaml
doc/: Doxyfile  index.rst
include/: Mythen3Camera.h  Mythen3Interface.h  Mythen3Net.h
python/: __init__.py
sip/: Mythen3Camera.sip  Mythen3Interface.sip
src/: Makefile  Mythen3Camera.cpp  Mythen3Interface.cpp  Mythen3Net.cpp
tango/: CMakeLists.txt
test/: CMakeLists.txt  Makefile  Mythen3Test.cpp  limamythen3test.py  mythen3test.py  test_Mythen3_camera.cpp  test_Mythen3_decode.cpp
